--- a/index.html
+++ b/index.html
@@ -12,35 +12,112 @@
     <header class="container">
         <div class=" cabecalho container-max">
             <div>
-            <img src="img/camargo_drones_imagem_peguena-removebg-preview2.png" alt="" width="70px">
-        </div>
-        <div class="container-cabecalho">
-            <h1><span>Camargo</span>Drones</h1>
-            <a href="https://wa.link/qnpqs1">Solicite Orçamento</a>
-        </div>
-        </div>
-            <li class="menu" >
-                <ul>
-                    <p><a href="">Intoduçao</a></p>
-                </ul>
-                <ul>
-                    <p><a href="">Equipe</a></p>
-                </ul>
-                <ul>
-                    <p><a href="">Localizaçao</a></p>
-                </ul>
-                <ul>
-                    <p><a href="">Contatos</a></p>
-                </ul>
-            </li>
-    </header>
-    <main>
-        <div class="background">
-            <div class="container-max">
-                
+                <img src="img/camargo_drones_imagem_peguena-removebg-preview2-copia.png" alt="" width="30px">
+            </div>
+            <div class="container-cabecalho">
+                <h1><span>Camargo</span>Drones</h1>
             </div>
         </div>
+
+    </header>
+    <main>
+        <section class=" background">
+            <img src="./img/background-zQJ0yfPj8-transformed.jpeg" alt="funda da pagina" class="background-img">
+            <div class="container-max">
+
+                <div class="container-main">
+                    <div class="main-frase">
+                        <h1>Pulverização rápida e otimizada, economizando tempo e dinheiro.</h1>
+                        <div class="botao">
+                            <h2>Solicite um orçamento sem compromisso e agende uma demonstração.</h2>
+                            <a href="https://wa.link/qnpqs1">Solicite Orçamento</a>
+                        </div>
+                    </div>
+                    <div class="main-imagem">
+                        <img src="./img/T20.jpg" alt="imagem Drone">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container-secundario">
+            <div class="container-max">
+                <div class="Beneficios">
+                    <h1>vantagens de usar um Drone</h1>
+                    <div>
+                        <ul>
+                            <li>
+                                <p><strong>Precisão na aplicação:</strong> Aplicação precisa de pesticidas e
+                                    fertilizantes, reduzindo o desperdício.</p>
+                            </li>
+                            <li>
+                                <p> <strong>Acesso a áreas remotas:</strong> Capacidade de alcançar terrenos difíceis ou
+                                    grandes campos de forma eficiente.</p>
+                            </li>
+                            <li>
+                                <p><strong>Economia de tempo e custo:</strong> Cobertura mais rápida e econômica em
+                                    comparação com métodos tradicionais.</p>
+                            </li>
+                            <li>
+                                <p><strong>Menos compactação do solo:</strong> Evita danos causados pela entrada de
+                                    veículos pesados na plantação.</p>
+                            </li>
+                            <li>
+                                <p><strong>Menor exposição a produtos químicos:</strong> Reduz a dispersão no ar e a
+                                    exposição dos trabalhadores agrícolas.</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="container-max">
+            <div class="midias">
+                <ul>
+                    <li>
+                        <p><a href="">INSTAGRAM</a></p>
+                    </li>
+                    <li>
+                        <p><a href="">FACEBOOK</a></p>
+                    </li>
+                    <li>
+                        <p><a href="">WHATSAPP</a></p>
+                    </li>
+                    <li>
+                        <p><a href="">EMAIL</a></p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
+
+<!-- <div class="botao">
+                            <a href="https://wa.link/qnpqs1">Solicite Orçamento</a>
+                        </div> -->
+
+<!-- <li class="listaPq  container-max">
+                    <ul>
+                        <h2> <strong>Precisão na aplicação:</strong> Aplicação precisa e direcionada de produtos
+                            químicos, reduzindo o desperdício.</h2>
+                    </ul>
+                    <ul>
+                        <h2> <strong>Acesso a áreas difíceis: </strong> Capaz de alcançar terrenos inacessíveis para
+                            equipamentos convencionais.</h2>
+                    </ul>
+                    <ul>
+                        <h2> <strong>Economia de tempo:</strong> Cobertura rápida e eficiente, diminuindo o tempo
+                            necessário para a pulverização.</h2>
+                    </ul>
+                    <ul>
+                        <h2><strong>Segurança do operador:</strong> Elimina a exposição direta dos trabalhadores a
+                            produtos químicos tóxicos.</h2>
+                    </ul>
+                    <ul>
+                        <h2><strong>Sustentabilidade ambiental:</strong>Reduz o impacto ambiental negativo associado
+                            à
+                            aplicação de produtos químicos na agricultura.</h2>
+                    </ul> -->
