--- a/index.html
+++ b/index.html
@@ -43,29 +43,33 @@
             <div class="container-max">
                 <div class="Beneficios">
                     <h1>vantagens de usar um Drone</h1>
-                    <div>
-                        <ul>
+                    <div class="container-vantagens">
+                        <ul class="lista-vantagens">
                             <li>
-                                <p><strong>Precisão na aplicação:</strong> Aplicação precisa de pesticidas e
-                                    fertilizantes, reduzindo o desperdício.</p>
+                                <p><strong>Precisão na aplicação:</strong><br></p> <span>Aplicação precisa de pesticidas e
+                                    fertilizantes, reduzindo o desperdício.</span>
                             </li>
                             <li>
-                                <p> <strong>Acesso a áreas remotas:</strong> Capacidade de alcançar terrenos difíceis ou
-                                    grandes campos de forma eficiente.</p>
+                                <p> <strong>Acesso a áreas remotas:</strong><br></p><span> Capacidade de alcançar terrenos difíceis ou
+                                    grandes campos de forma eficiente</span>.
                             </li>
                             <li>
-                                <p><strong>Economia de tempo e custo:</strong> Cobertura mais rápida e econômica em
-                                    comparação com métodos tradicionais.</p>
+                                <p><strong>Economia de tempo e custo:</strong><br></p><span> Cobertura mais rápida e econômica em
+                                    comparação com métodos tradicionais.</span>
                             </li>
                             <li>
-                                <p><strong>Menos compactação do solo:</strong> Evita danos causados pela entrada de
-                                    veículos pesados na plantação.</p>
+                                <p><strong>Menos compactação do solo:</strong><br></p><span> Evita danos causados pela entrada de
+                                    veículos pesados na plantação.</span>
                             </li>
                             <li>
-                                <p><strong>Menor exposição a produtos químicos:</strong> Reduz a dispersão no ar e a
-                                    exposição dos trabalhadores agrícolas.</p>
+                                <p><strong>Menor exposição a produtos químicos:</strong><br></p><span> Reduz a dispersão no ar e a
+                                    exposição dos trabalhadores agrícolas.</span>
                             </li>
                         </ul>
+
+                        <video class="video" autoplay loop>
+                            <source src="./img/t20.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
             </div>
