--- a/index.html
+++ b/index.html
@@ -81,12 +81,10 @@
         <section class="localizacao">
             <div class="container-max">
                 <div class="google-maps">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d940.2431797381322!2d-46.545164829229215!3d-19.499809492924417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e0!4m0!4m3!3m2!1d-19.4997096!2d-46.5453579!5e0!3m2!1spt-PT!2sbr!4v1710711870616!5m2!1spt-PT!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d940.2431797381322!2d-46.545164829229215!3d-19.499809492924417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e0!4m0!4m3!3m2!1d-19.4997096!2d-46.5453579!5e0!3m2!1spt-PT!2sbr!4v1710711870616!5m2!1spt-PT!2sbr" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <div>
                         <p>Endereço:Rua oitenta e um, N344</p>
                         <p>Horario de funcionamento: 08:00 as 18:00</p>
-                        <p></p>
-                        <p></p>
                     </div>
             </div>
             </div>
@@ -95,18 +93,16 @@
     <footer>
         <div class="container-max">
             <div class="midias">
+                <p>Contatos</p>
                 <ul>
                     <li>
-                        <p><a href="">INSTAGRAM</a></p>
+                        <p><a href=""><img src="./img/instagram.svg" alt=""></a></p>
                     </li>
                     <li>
-                        <p><a href="">FACEBOOK</a></p>
+                        <p><a href=""> <img src="./img/whatsapp.svg" alt=""> </a></p>
                     </li>
                     <li>
-                        <p><a href="">WHATSAPP</a></p>
-                    </li>
-                    <li>
-                        <p><a href="">EMAIL</a></p>
+                        <p><a href=""> <img src="./img/email-svgrepo-com.svg" alt=""> </a></p>
                     </li>
                 </ul>
             </div>
